<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff00"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="40dp"
        android:text="@string/users"
        android:textColor="#FF0000"
    android:textSize="30sp"/>
    <EditText
        android:id="@+id/edtvw"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView"
        android:inputType="text"
        android:hint="write"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textColor="#FF0000"
        android:layout_toRightOf="@id/textView"
        android:textSize="25sp"
        android:layout_marginLeft="55dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_below="@+id/edtvw"
        android:text="@string/age"
        android:textSize="30sp" />

        <EditText
            android:id="@+id/edtvw2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_below="@+id/edtvw"
            android:inputType="text"
            android:layout_toRightOf="@id/textView3"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:text="Gender" />


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textColor="#FF0000"
        android:onClick="showToast"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:onClick="showToast"
        android:textColor="#FF0000"
        android:text="@string/female" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@id/edtvw"

        android:onClick="showToast"
        android:text="@string/checkbox"
        android:layout_toEndOf="@id/edtvw" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:textColor="#FF0000"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_toRightOf="@id/edtvw"

        android:onClick="showToast"
        android:text="Burger"
        android:layout_toEndOf="@id/edtvw" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_below="@+id/checkBox2"
        android:layout_toRightOf="@id/edtvw"

        android:onClick="showToast"
        android:text="Coke"
        android:layout_toEndOf="@id/edtvw" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:textColor="#FF0000"
        android:layout_marginLeft="100dp"
        android:text="@string/button"
        android:layout_marginStart="100dp" />

</RelativeLayout>